fix logo sizing on dark mode

--- a/src/assets/03-styles.css
+++ b/src/assets/03-styles.css
@@ -82,7 +82,7 @@ header {
   margin-bottom: 5rem;
 }
 
-header #logo {
+header #logo, header #logo img {
   max-width: 10rem;
 }
 
